Bug fix: draggable changing z-index https://stackoverflow.com/q/74321172/12302691

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -222,7 +222,7 @@ img {
   .info-container {
     > a {
       position: absolute;
-      z-index: 2;
+      z-index: 2000;
     }
     .main-logo {
       top: 2.25rem;
